# opalib

./: DELETE_THESE_FILES.md  LICENSE  PATCH.MINOR.MAJOR.md  PUBLISH.md  README.md  WEB_FRAMEWORK_GUIDE.md  __init__.py  auto-version-bump.yml  examples.py  format.lua  http.lua  ieee754.lua  promise.lua  pyproject.toml  requirements.txt  util.lua
.github/workflows/: bump-version.yml  pypi-publish.yml  python-publish.yml  release.yml  version-check.yml
src/: __init__.py  http.py  ieee754.py  units.py  util.py  web.py
src/examples/: example_1.py  example_2.py  mesh_formats.py
src/opalib/: __init__.py  ai.py  bio_clients.py  enum_extender.py  format.py  framework.py  hardware.py  http.py  inference.py  libdeflate.py  ollama_integration.py  physics.py  promise.py  tensor.py  tokenizer.py  units.py  util.py  web.py
src/opalib/examples/: example_1.py  example_2.py  mesh_formats.py
src/opalib/tests/: bio_clients_test.py  enum_test.py  format_test.py  ieee754_test.py  libdeflate_test.py  physics_test.py  units_test.py  util_test.py  web_test.py
src/tests/: bio_clients_test.py  enum_test.py  format_test.py  http_test.py  ieee754_test.py  libdeflate_test.py  physics_test.py  units_test.py  util_test.py  web_test.py
